# huffmanrs

./: Cargo.toml  README.md
resources/: medium-input.huff
src/: main.rs
