[package]
name = "huffmanrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.2"
priority-queue = "1.2.3"
clap = { version = "3.2.19", features = ["derive"] }
bitvec = { version = "1.0.1" , features = ["std"] }